# chipflow-digital-ip

./: .gitignore  README.md  assert_cov.json  i2c_assertion_cov.json  i2c_block_cov.json  i2c_expression_cov.json  i2c_read_test.gtkw  i2c_read_test.vcd  i2c_start_test.gtkw  i2c_start_test.vcd  i2c_statement_cov.json  i2c_write_test.gtkw  i2c_write_test.vcd  pyproject.toml  smoke_test.gtkw  smoke_test.vcd  test.vcd  test_assert.gtkw  test_assert.vcd  test_uart.vcd
.github/workflows/: main.yaml
amaranth/sim/: _coverage.py
chipflow_digital_ip/base/: __init__.py  _platform_timer.py  _soc_id.py  gptimer.py
chipflow_digital_ip/examples/pwm_sv/: Makefile  README.md  convert_yosys_slang.sh  pwm.py  pwm_peripheral.sv  pwm_peripheral.toml  pwm_tb.sv  test_pwm.py  test_pwm_amaranth.py
chipflow_digital_ip/io/: __init__.py  _glasgow_i2c.py  _glasgow_iostream.py  _gpio.py  _i2c.py  _rfc_uart.py  _spi.py  _svtest.py  _uart.py  _verilog_wrapper.py  usb_ohci.toml
chipflow_digital_ip/io/sv_timer/: wb_timer.sv  wb_timer.toml
chipflow_digital_ip/io/sv_timer/drivers/: wb_timer.h
chipflow_digital_ip/memory/: __init__.py  _glasgow_qspi.py  _hyperram.py  _qspi_flash.py  _sram.py
chipflow_digital_ip/processors/: __init__.py
chipflow_digital_ip/processors/_openhw/: convert_cv32e40p_yosys_slang.sh  convert_dm_wrap_yosys_slang.sh  cv32e40p.py
chipflow_digital_ip/processors/_openhw/rtlil_yosys_slang/: README.md
chipflow_digital_ip/processors/_openhw/verilog_yosys_slang/: README.md
docs/: conf.py  index.rst  simulation-architecture-analysis.md  verilog_wrapper.rst
examples/sv_soc/: README.md  chipflow.toml
examples/sv_soc/design/: __init__.py  design.py
examples/sv_soc/design/software/: .gitignore  main.c
examples/sv_soc/design/steps/: __init__.py  board.py
examples/sv_soc/design/tests/: test_timer_sim.py
examples/sv_timer_simulation/: README.md  simulate_timer.py
tests/: test_assert.py  test_gpio.py  test_gptimer.py  test_hyperram.py  test_i2c.py  test_qspi.py  test_spi.py  test_uart.py  test_utils.py  test_verilog_wrapper.py  test_wb_timer.py
