# Project metadata

[project]
name = "chipflow-digital-ip"
dynamic = ["version"]
description = "curated collection of Amaranth cores"
authors = [
    {name = "Myrtle Shah", email = "gatecat@ds0.me" },
]
readme = {file = "README.md", content-type = "text/markdown"}
license-files = [
    "LICENSE*",
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "amaranth>=0.5,<0.6",
    "chipflow @ git+https://github.com/ChipFlow/chipflow-lib.git",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio",
    "minerva @ git+https://github.com/minerva-cpu/minerva",
    "pythondata-misc-usb_ohci @ git+https://github.com/robtaylor/pythondata-misc-usb_ohci@f366de36d0cf04ca9b96614a424ae4feea0851a8",
    "pydantic>=2.0",
    "tomli>=2.0",
    "yowasp-yosys>=0.50",  # For SystemVerilog support via built-in yosys-slang
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "**/*.py",
    "**/*.v",
    "**/*.sv",
    "**/*.toml",
    "**/*.yaml"
    ]
source-includes = [
    "**/drivers/*.{c,h,cpp,hpp}"
    ]

[tool.pdm.build.wheel-data]
purelib = [
    {path = "**/drivers/*", relative-to = "."},
]


# Development workflow configuration

[tool.pyright]
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false
reportAttributeAccessIssue = false
reportWildcardImportFromLibrary = false
ignore = [ "tests", "vendor" ]

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'W291', 'W293']
ignore = ['F403', 'F405', 'F841']
exclude = ["vendor/**"]

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=chipflow-digital-ip cov-report=term"
test-cov-html.cmd = "pytest --cov=chipflow-digital-ip --cov-report=html"
test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.composite = ["./tools/license_check.sh", "ruff check"]
doc.cmd = "sphinx-build docs/ docs/_build/"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
    "sphinx>=7.0",
    "pyright>=1.1.407",
    "amaranth-stubs>=0.1.1",
]
